...
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".presenter.ui.MapsActivity" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/venueList"
            android:layout_width="match_parent"
            android:layout_marginBottom="30dp"
            android:layout_height="260dp"
            android:layout_gravity="bottom"
            android:visibility="gone" />

...
